save current state before ui-ux review